feat: ajustment for apresentation

--- a/docs/argon.css
+++ b/docs/argon.css
@@ -15056,7 +15056,7 @@ button.bg-lighter:focus
 
 .bg-gradient-success
 {
-    background: linear-gradient(87deg, #2dce89 0, #2dcecc 100%) !important;
+    background: linear-gradient(87deg, #88C420 0, #2dcecc 100%) !important;
 }
 
 .bg-gradient-info
@@ -15412,7 +15412,7 @@ button.section-darker:focus
 
 .bg-gradient-success
 {
-    background: linear-gradient(87deg, #2dce89 0, #2dcecc 100%) !important;
+    background: linear-gradient(87deg, #88C420 0, #2dcecc 100%) !important;
 }
 
 .bg-gradient-info
