--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text"><i class="fas fa-search"></i></span>
           </div>
-          <input class="form-control" placeholder="Search" type="text" (focus)="focus = true"
+          <input class="form-control" placeholder="Buscar" type="text" (focus)="focus = true"
           (blur)="focus = false">
         </div>
       </div>
@@ -29,29 +29,29 @@
         </a>
         <div class="dropdown-menu-arrow dropdown-menu-right" ngbDropdownMenu>
           <div class=" dropdown-header noti-title">
-            <h6 class="text-overflow m-0">Welcome!</h6>
+            <h6 class="text-overflow m-0">Bem-vindo!</h6>
           </div>
           <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
             <i class="ni ni-single-02"></i>
-            <span>My profile</span>
+            <span>Meu Perfil</span>
           </a>
           <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
             <i class="ni ni-settings-gear-65"></i>
-            <span>Settings</span>
+            <span>Configurações</span>
           </a>
           <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
             <i class="ni ni-calendar-grid-58"></i>
-            <span>Activity</span>
+            <span>Atividade</span>
           </a>
           <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
             <i class="ni ni-support-16"></i>
-            <span>Support</span>
+            <span>Suporte</span>
           </a>
-          <div class="dropdown-divider"></div>
-          <a href="#!" class="dropdown-item">
+          <!-- <div class="dropdown-divider"></div>
+          <a routerLinkActive="active" [routerLink]="['/login']" class="dropdown-item">
             <i class="ni ni-user-run"></i>
-            <span>Logout</span>
-          </a>
+            <span>Sair</span>
+          </a> -->
         </div>
       </li>
     </ul>
