--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,13 +1,13 @@
-<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url(assets/img/theme/profile-cover.jpg); background-size: cover; background-position: center top;">
+<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px;  background-size: cover; background-position: center top;">
   <!-- Mask -->
-  <span class="mask bg-gradient-danger opacity-8"></span>
+  <span class="mask bg-gradient-success opacity-8"></span>
   <!-- Header container -->
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
       <div class="col-lg-7 col-md-10">
-        <h1 class="display-2 text-white">Hello Jesse</h1>
-        <p class="text-white mt-0 mb-5">This is your profile page. You can see the progress you've made with your work and manage your projects or assigned tasks</p>
-        <a href="#!" class="btn btn-info">Edit profile</a>
+        <h1 class="display-2 text-white">Olá Jesse</h1>
+        <p class="text-white mt-0 mb-5">Esta é a sua página de perfil. Aqui você pode editar todos os seus dados pessoais.</p>
+        <a href="#!" class="btn btn-info">Editar Perfil</a>
       </div>
     </div>
   </div>
@@ -27,15 +27,15 @@
         </div>
         <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
           <div class="d-flex justify-content-between">
-            <a href="javascript:void(0)" class="btn btn-sm btn-info mr-4">Connect</a>
-            <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Message</a>
+            <!-- <a href="javascript:void(0)" class="btn btn-sm btn-info mr-4">Connect</a>
+            <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Message</a> -->
           </div>
         </div>
         <div class="card-body pt-0 pt-md-4">
           <div class="row">
             <div class="col">
               <div class="card-profile-stats d-flex justify-content-center mt-md-5">
-                <div>
+                <!-- <div>
                   <span class="heading">22</span>
                   <span class="description">Friends</span>
                 </div>
@@ -46,15 +46,15 @@
                 <div>
                   <span class="heading">89</span>
                   <span class="description">Comments</span>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
           <div class="text-center">
             <h3>
-              Jessica Jones<span class="font-weight-light">, 27</span>
+              Jessica Jones<span class="font-weight-light"></span>
             </h3>
-            <div class="h5 font-weight-300">
+            <!-- <div class="h5 font-weight-300">
               <i class="ni location_pin mr-2"></i>Bucharest, Romania
             </div>
             <div class="h5 mt-4">
@@ -65,7 +65,7 @@
             </div>
             <hr class="my-4" />
             <p>Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music.</p>
-            <a href="javascript:void(0)">Show more</a>
+            <a href="javascript:void(0)">Show more</a> -->
           </div>
         </div>
       </div>
@@ -75,27 +75,27 @@
         <div class="card-header bg-white border-0">
           <div class="row align-items-center">
             <div class="col-8">
-              <h3 class="mb-0">My account</h3>
+              <h3 class="mb-0">Minha conta</h3>
             </div>
             <div class="col-4 text-right">
-              <a href="#!" class="btn btn-sm btn-primary">Settings</a>
+              <a href="#!" class="btn btn-sm btn-primary">Atualizar</a>
             </div>
           </div>
         </div>
         <div class="card-body">
           <form>
-            <h6 class="heading-small text-muted mb-4">User information</h6>
+            <h6 class="heading-small text-muted mb-4">Informação do usuário</h6>
             <div class="pl-lg-4">
               <div class="row">
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-username">Username</label>
-                    <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Username" value="lucky.jesse">
+                    <label class="form-control-label" for="input-username">Nome completo</label>
+                    <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Nome completo" value="Jessica da Silva">
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-email">Email address</label>
+                    <label class="form-control-label" for="input-email">Endereço de e-mail</label>
                     <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="jesse@example.com">
                   </div>
                 </div>
@@ -103,22 +103,22 @@
               <div class="row">
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-first-name">First name</label>
-                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" value="Lucky">
+                    <label class="form-control-label" for="input-first-name">Nome usuário</label>
+                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="Nome usuário" value="Jessica">
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-last-name">Last name</label>
-                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" value="Jesse">
+                    <label class="form-control-label" for="input-last-name">Tipo conta</label>
+                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Tipo da conta" value="Free">
                   </div>
                 </div>
               </div>
             </div>
-            <hr class="my-4" />
+            <!-- <hr class="my-4" /> -->
             <!-- Address -->
-            <h6 class="heading-small text-muted mb-4">Contact information</h6>
-            <div class="pl-lg-4">
+            <!-- <h6 class="heading-small text-muted mb-4">Contact information</h6> -->
+            <!-- <div class="pl-lg-4">
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
@@ -148,15 +148,15 @@
                 </div>
               </div>
             </div>
-            <hr class="my-4" />
+            <hr class="my-4" /> -->
             <!-- Description -->
-            <h6 class="heading-small text-muted mb-4">About me</h6>
+            <!-- <h6 class="heading-small text-muted mb-4">About me</h6>
             <div class="pl-lg-4">
               <div class="form-group">
                 <label>About Me</label>
                 <textarea rows="4" class="form-control form-control-alternative" placeholder="A few words about you ...">A beautiful Dashboard for Bootstrap 4. It is Free and Open Source.</textarea>
               </div>
-            </div>
+            </div> -->
           </form>
         </div>
       </div>
