--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,8 +1,8 @@
 <div class="main-content">
   <nav class="navbar navbar-top navbar-horizontal navbar-expand-md navbar-dark">
-    <div class="container px-4">
+    <div class="container">
       <a class="navbar-brand" routerLinkActive="active" [routerLink]="['/dashboard']">
-        <img src="assets/img/brand/reggistre_logo_azul.png" />
+        <img src="assets/img/brand/reggistre_logo_azul.png"/>
       </a>
       <button class="navbar-toggler" type="button" (click)="isCollapsed=!isCollapsed"
          aria-controls="sidenav-collapse-main">
