--- a/src/app/pages/category/new-category/new-category.component.html
+++ b/src/app/pages/category/new-category/new-category.component.html
@@ -29,7 +29,7 @@
             <h6 class="heading-small text-muted mb-4">Informação da categoria</h6>
             <div class="pl-lg-4">
               <div class="row">
-                <div class="col-lg-8 align-items-center">
+                <div class="col-lg-12 align-items-center">
                   <div class="form-group">
                     <label class="form-control-label" for="input-username">Nome da categoria</label>
                     <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Nome da categoria" value="Transporte">
@@ -56,7 +56,8 @@
                   </div>
                 </div>
               </div> -->
-              <div class="col-4 text-right">
+              <div class="col-12 text-right">
+                <a href="#!" class="btn btn-sm btn-danger">Cancelar</a>
                 <a href="#categories" class="btn btn-sm btn-primary">Criar categoria</a>
               </div>
             </div>
