--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -31,6 +31,10 @@
               <span class="btn-inner--icon"><img src="../assets/img/icons/common/google.svg"></span>
               <span class="btn-inner--text">Google</span>
             </a> -->
+            <a class="navbar-brand">
+              <img src="assets/img/brand/reggistre_logo_azul.png" class="navbar-brand-img" style="height: 100px;"/>
+            </a>
+
           </div>
         </div>
         <div class="card-body px-lg-5 py-lg-5">
@@ -67,7 +71,7 @@
         </div>
       </div>
       <div class="row mt-3">
-        <div class="col-6">
+        <div class="col-6" routerLinkActive="active" [routerLink]="['/password-recovery']">
           <a href="javascript:void(0)" class="text-light"><small>Esqueceu sua senha?</small></a>
         </div>
         <div class="col-6 text-right" routerLinkActive="active" [routerLink]="['/register']">
