feat: add new function

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -104,7 +104,7 @@
       <ul class="navbar-nav mb-md-3">
         <li class="nav-item">
           <a class="nav-link" href="#">
-            <i class="ni ni-spaceship"></i> Free
+            <i class="ni ni-spaceship"></i> Admin
           </a>
         </li>
       </ul>
