--- a/src/app/pages/movement/list-movements/list-movements.component.html
+++ b/src/app/pages/movement/list-movements/list-movements.component.html
@@ -71,7 +71,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Evolução</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Saldo Futuro</h5>
                   <span class="h2 font-weight-bold mb-0">49,65%</span>
                 </div>
                 <div class="col-auto">
@@ -106,7 +106,7 @@
               <tr>
                 <th scope="col">Nome</th>
                 <th scope="col">Tipo</th>
-                <th scope="col">Uso</th>
+                <th scope="col">valor</th>
                 <th scope="col"></th>
               </tr>
             </thead>
@@ -114,11 +114,11 @@
               <tr>
                 <th scope="row">
                   <div class="media align-items-center">
-                    <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
+                    <!-- <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
                       <img alt="Image placeholder" src="../assets/img/theme/transporte.png">
-                    </a>
+                    </a> -->
                     <div class="media-body">
-                      <span class="mb-0 text-sm">Transporte</span>
+                      <span class="mb-0 text-sm">Conta de água</span>
                     </div>
                   </div>
                 </th>
@@ -148,11 +148,11 @@
                 </td> -->
                 <td>
                   <div class="d-flex align-items-center">
-                    <span class="mr-2">60%</span>
+                    <span class="mr-2">R$ 150,00</span>
                     <div>
-                      <div class="progress">
+                      <!-- <div class="progress">
                         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </td>
@@ -172,9 +172,9 @@
               <tr>
                 <th scope="row">
                   <div class="media align-items-center">
-                    <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
+                    <!-- <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
                       <img alt="Image placeholder" src="../assets/img/theme/saude.png">
-                    </a>
+                    </a> -->
                     <div class="media-body">
                       <span class="mb-0 text-sm">Saúde</span>
                     </div>
@@ -206,11 +206,11 @@
                 </td> -->
                 <td>
                   <div class="d-flex align-items-center">
-                    <span class="mr-2">100%</span>
+                    <span class="mr-2">R$500,00</span>
                     <div>
-                      <div class="progress">
+                      <!-- <div class="progress">
                         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </td>
@@ -230,11 +230,11 @@
               <tr>
                 <th scope="row">
                   <div class="media align-items-center">
-                    <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
+                    <!-- <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
                       <img alt="Image placeholder" src="../assets/img/theme/cartao.png">
-                    </a>
+                    </a> -->
                     <div class="media-body">
-                      <span class="mb-0 text-sm">Cartão</span>
+                      <span class="mb-0 text-sm">Conta de luz</span>
                     </div>
                   </div>
                 </th>
@@ -264,11 +264,11 @@
                 </td> -->
                 <td>
                   <div class="d-flex align-items-center">
-                    <span class="mr-2">72%</span>
+                    <span class="mr-2">R$200</span>
                     <div>
-                      <div class="progress">
+                      <!-- <div class="progress">
                         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100" style="width: 72%;"></div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </td>
@@ -288,11 +288,11 @@
               <tr>
                 <th scope="row">
                   <div class="media align-items-center">
-                    <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
+                    <!-- <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
                       <img alt="Image placeholder" src="../assets/img/theme/viagem.png">
-                    </a>
+                    </a> -->
                     <div class="media-body">
-                      <span class="mb-0 text-sm">Viagem</span>
+                      <span class="mb-0 text-sm">Notebook</span>
                     </div>
                   </div>
                 </th>
@@ -322,11 +322,11 @@
                 </td> -->
                 <td>
                   <div class="d-flex align-items-center">
-                    <span class="mr-2">90%</span>
+                    <span class="mr-2">R$2000,00</span>
                     <div>
-                      <div class="progress">
+                      <!-- <div class="progress">
                         <div class="progress-bar bg-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </td>
@@ -346,11 +346,11 @@
               <tr>
                 <th scope="row">
                   <div class="media align-items-center">
-                    <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
+                    <!-- <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
                       <img alt="Image placeholder" src="../assets/img/theme/boleto.png">
-                    </a>
+                    </a> -->
                     <div class="media-body">
-                      <span class="mb-0 text-sm">Conta de Luz</span>
+                      <span class="mb-0 text-sm">Supermercado</span>
                     </div>
                   </div>
                 </th>
@@ -380,11 +380,11 @@
                 </td> -->
                 <td>
                   <div class="d-flex align-items-center">
-                    <span class="mr-2">100%</span>
+                    <span class="mr-2">R$500,00</span>
                     <div>
-                      <div class="progress">
+                      <!-- <div class="progress">
                         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </td>
