--- a/src/app/pages/movement/new-movement/new-movement.component.html
+++ b/src/app/pages/movement/new-movement/new-movement.component.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-last-name">Recorrência</label>
+                    <label class="form-control-label" for="input-last-name">Categoria</label>
                     <input type="text" id="input-last-name" class="form-control form-control-alternative" >
                   </div>
                 </div>
