--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -71,7 +71,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Evolução</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Saldo Futuro</h5>
                   <span class="h2 font-weight-bold mb-0">49,65%</span>
                 </div>
                 <div class="col-auto">
@@ -98,14 +98,14 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header border-0">
-          <h3 class="mb-0">Categorias</h3>
+          <h3 class="mb-0">Prêmios</h3>
         </div>
         <div class="table-responsive">
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
               <tr>
                 <th scope="col">Nome</th>
-                <th scope="col">Tipo</th>
+                <!-- <th scope="col">Tipo</th> -->
                 <th scope="col">Uso</th>
                 <th scope="col"></th>
               </tr>
@@ -114,17 +114,17 @@
               <tr>
                 <th scope="row">
                   <div class="media align-items-center">
-                    <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
+                    <!-- <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
                       <img alt="Image placeholder" src="../assets/img/theme/transporte.png">
-                    </a>
+                    </a> -->
                     <div class="media-body">
-                      <span class="mb-0 text-sm">Transporte</span>
+                      <span class="mb-0 text-sm">Cupom desconto</span>
                     </div>
                   </div>
                 </th>
-                <td>
+                <!-- <td>
                   Despesa
-                </td>
+                </td> -->
                 <!-- <td>
                   <span class="badge badge-dot mr-4">
                     <i class="bg-warning"></i> pending
@@ -172,17 +172,15 @@
               <tr>
                 <th scope="row">
                   <div class="media align-items-center">
-                    <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
+                    <!-- <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
                       <img alt="Image placeholder" src="../assets/img/theme/saude.png">
-                    </a>
+                    </a> -->
                     <div class="media-body">
-                      <span class="mb-0 text-sm">Saúde</span>
+                      <span class="mb-0 text-sm">Cupom desconto loja</span>
                     </div>
                   </div>
                 </th>
-                <td>
-                  Despesa
-                </td>
+
                 <!-- <td>
                   <span class="badge badge-dot">
                     <i class="bg-success"></i> completed
@@ -230,17 +228,15 @@
               <tr>
                 <th scope="row">
                   <div class="media align-items-center">
-                    <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
+                    <!-- <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
                       <img alt="Image placeholder" src="../assets/img/theme/cartao.png">
-                    </a>
+                    </a> -->
                     <div class="media-body">
-                      <span class="mb-0 text-sm">Cartão</span>
+                      <span class="mb-0 text-sm">Desconto farmácia</span>
                     </div>
                   </div>
                 </th>
-                <td>
-                  Despesa
-                </td>
+
                 <!-- <td>
                   <span class="badge badge-dot mr-4">
                     <i class="bg-danger"></i> delayed
@@ -288,17 +284,17 @@
               <tr>
                 <th scope="row">
                   <div class="media align-items-center">
-                    <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
+                    <!-- <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
                       <img alt="Image placeholder" src="../assets/img/theme/viagem.png">
-                    </a>
+                    </a> -->
                     <div class="media-body">
-                      <span class="mb-0 text-sm">Viagem</span>
+                      <span class="mb-0 text-sm">Desconto viagem</span>
                     </div>
                   </div>
                 </th>
-                <td>
+                <!-- <td>
                   Despesa
-                </td>
+                </td> -->
                 <!-- <td>
                   <span class="badge badge-dot">
                     <i class="bg-info"></i> on schedule
@@ -346,17 +342,17 @@
               <tr>
                 <th scope="row">
                   <div class="media align-items-center">
-                    <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
+                    <!-- <a href="javascript:void(0)" class="avatar rounded-circle mr-3">
                       <img alt="Image placeholder" src="../assets/img/theme/boleto.png">
-                    </a>
+                    </a> -->
                     <div class="media-body">
-                      <span class="mb-0 text-sm">Conta de Luz</span>
+                      <span class="mb-0 text-sm">Conta premium</span>
                     </div>
                   </div>
                 </th>
-                <td>
+                <!-- <td>
                   Despesa
-                </td>
+                </td> -->
                 <!-- <td>
                   <span class="badge badge-dot mr-4">
                     <i class="bg-success"></i> completed
