--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -5,7 +5,7 @@
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
       <div class="col-lg-7 col-md-10">
-        <h1 class="display-2 text-white">Olá Jesse</h1>
+        <h1 class="display-2 text-white">Olá Administrador</h1>
         <p class="text-white mt-0 mb-5">Esta é a sua página de perfil. Aqui você pode editar todos os seus dados pessoais.</p>
         <a href="#!" class="btn btn-info">Editar Perfil</a>
       </div>
@@ -20,7 +20,7 @@
           <div class="col-lg-3 order-lg-2">
             <div class="card-profile-image">
               <a href="javascript:void(0)">
-                <img src="assets/img/theme/team-4-800x800.jpg" class="rounded-circle">
+                <img src="assets/img/theme/pngtree-user-vector-avatar-png-image_1541962.jpeg" class="rounded-circle">
               </a>
             </div>
           </div>
@@ -52,7 +52,7 @@
           </div>
           <div class="text-center">
             <h3>
-              Jessica Jones<span class="font-weight-light"></span>
+              Administrador<span class="font-weight-light"></span>
             </h3>
             <!-- <div class="h5 font-weight-300">
               <i class="ni location_pin mr-2"></i>Bucharest, Romania
@@ -90,13 +90,13 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-username">Nome completo</label>
-                    <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Nome completo" value="Jessica da Silva">
+                    <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Nome completo" value="Administrador">
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-email">Endereço de e-mail</label>
-                    <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="jesse@example.com">
+                    <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="admin@email.com">
                   </div>
                 </div>
               </div>
@@ -104,13 +104,13 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-first-name">Nome usuário</label>
-                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="Nome usuário" value="Jessica">
+                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="Nome usuário" value="Administrador">
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-last-name">Tipo conta</label>
-                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Tipo da conta" value="Free">
+                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Tipo da conta" value="Admin">
                   </div>
                 </div>
               </div>
