integrate category create

--- a/src/app/pages/category/new-category/new-category.component.html
+++ b/src/app/pages/category/new-category/new-category.component.html
@@ -1,4 +1,5 @@
-<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 300px;  background-size: cover; background-position: center top;">
+<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center"
+  style="min-height: 300px;  background-size: cover; background-position: center top;">
   <!-- Mask -->
   <span class="mask bg-gradient-success opacity-8"></span>
   <!-- Header container -->
@@ -6,7 +7,8 @@
     <div class="row">
       <div class="col-lg-7 col-md-10">
         <h1 class="display-2 text-white">Nova categoria</h1>
-        <p class="text-white mt-0 mb-5">Esta é a página de cadastro de categorias. Aqui você pode criar as categorias de acordo com suas necessidades</p>
+        <p class="text-white mt-0 mb-5">Esta é a página de cadastro de categorias. Aqui você pode criar as categorias de
+          acordo com suas necessidades</p>
         <!-- <a href="#!" class="btn btn-info">Editar Perfil</a> -->
       </div>
     </div>
@@ -25,40 +27,22 @@
           </div>
         </div>
         <div class="card-body">
-          <form>
+          <form [formGroup]="categoryForm">
             <h6 class="heading-small text-muted mb-4">Informação da categoria</h6>
             <div class="pl-lg-4">
               <div class="row">
                 <div class="col-lg-12 align-items-center">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-username">Nome da categoria</label>
-                    <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Nome da categoria" value="Transporte">
+                    <label class="form-control-label {{getFieldError('nome') ? 'field-error' : ''}}"
+                      for="input-username">Nome da categoria</label>
+                    <input formControlName="nome" type="text" id="input-username"
+                      class="form-control form-control-alternative" placeholder="Nome da categoria" value="Transporte">
                   </div>
                 </div>
-                <!-- <div class="col-lg-6">
-                  <div class="form-group">
-                    <label class="form-control-label" for="input-email">Endereço de e-mail</label>
-                    <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="jesse@example.com">
-                  </div>
-                </div> -->
               </div>
-              <!-- <div class="row">
-                <div class="col-lg-6">
-                  <div class="form-group">
-                    <label class="form-control-label" for="input-first-name">Nome usuário</label>
-                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="Nome usuário" value="Jessica">
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="form-group">
-                    <label class="form-control-label" for="input-last-name">Tipo conta</label>
-                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Tipo da conta" value="Free">
-                  </div>
-                </div>
-              </div> -->
               <div class="col-12 text-right">
                 <a href="#!" class="btn btn-sm btn-danger">Cancelar</a>
-                <a href="#categories" class="btn btn-sm btn-primary">Criar categoria</a>
+                <a (click)="create()" class="btn btn-sm btn-primary">Criar categoria</a>
               </div>
             </div>
           </form>
