--- a/src/app/pages/category/list-categories/category-table/category-table.component.scss
+++ b/src/app/pages/category/list-categories/category-table/category-table.component.scss
@@ -15,3 +15,12 @@
   align-items: center;
   margin-right: 15px;
 }
+
+.first-dropdown {
+  transform: translate(-160px, -40px) !important;
+}
+
+.custom-item {
+  display: flex;
+  align-items: center;
+}
