--- a/src/app/pages/category/new-category/new-category.component.html
+++ b/src/app/pages/category/new-category/new-category.component.html
@@ -6,8 +6,9 @@
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
       <div class="col-lg-7 col-md-10">
-        <h1 class="display-2 text-white">Nova categoria</h1>
-        <p class="text-white mt-0 mb-5">Esta é a página de cadastro de categorias. Aqui você pode criar as categorias de
+        <h1 class="display-2 text-white">{{isUpdate ? 'Atualizar categoria' : 'Nova categoria'}}</h1>
+        <p class="text-white mt-0 mb-5">Esta é a página de {{isUpdate ? 'atualizar' : 'cadastro'}} de categorias. Aqui
+          você pode {{isUpdate ? 'atualizar' : 'criar'}} as categorias de
           acordo com suas necessidades</p>
         <!-- <a href="#!" class="btn btn-info">Editar Perfil</a> -->
       </div>
@@ -22,7 +23,7 @@
         <div class="card-header bg-white border-0">
           <div class="row align-items-center">
             <div class="col-8">
-              <h3 class="mb-0">Nova Categoria</h3>
+              <h3 class="mb-0">{{isUpdate ? 'Atualizar Categoria' : 'Nova Categoria'}}</h3>
             </div>
           </div>
         </div>
@@ -42,7 +43,8 @@
               </div>
               <div class="col-12 text-right">
                 <a href="#!" class="btn btn-sm btn-danger">Cancelar</a>
-                <a (click)="create()" class="btn btn-sm btn-primary">Criar categoria</a>
+                <a (click)="create()" class="btn btn-sm btn-primary">{{isUpdate ? 'Atualizar categoria' : 'Criar
+                  categoria'}}</a>
               </div>
             </div>
           </form>
