integrate movements delete and edit actions

--- a/src/app/pages/category/new-category/new-category.component.html
+++ b/src/app/pages/category/new-category/new-category.component.html
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col-lg-7 col-md-10">
         <h1 class="display-2 text-white">{{isUpdate ? 'Atualizar categoria' : 'Nova categoria'}}</h1>
-        <p class="text-white mt-0 mb-5">Esta é a página de {{isUpdate ? 'atualizar' : 'cadastro'}} de categorias. Aqui
+        <p class="text-white mt-0 mb-5">Esta é a página de {{isUpdate ? 'atualização' : 'cadastro'}} de categorias. Aqui
           você pode {{isUpdate ? 'atualizar' : 'criar'}} as categorias de
           acordo com suas necessidades</p>
         <!-- <a href="#!" class="btn btn-info">Editar Perfil</a> -->
