--- a/src/app/pages/movement/list-movements/movement-table/movement-table.component.html
+++ b/src/app/pages/movement/list-movements/movement-table/movement-table.component.html
@@ -46,10 +46,11 @@
               <a class="btn btn-sm btn-icon-only text-light" ngbDropdownToggle>
                 <i class="fas fa-ellipsis-v"></i>
               </a>
-              <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
-                <a class="dropdown-item" href="javascript:void(0)">Action</a>
-                <a class="dropdown-item" href="javascript:void(0)">Another action</a>
-                <a class="dropdown-item" href="javascript:void(0)">Something else here</a>
+              <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow customDropdown">
+                <a (click)="editMovement(movement.id)" class="dropdown-item custom-item" href="javascript:void(0)"> <i
+                    class="fas fa-edit"></i>Editar</a>
+                <a (click)="deleteMovement(movement.id)" class="dropdown-item custom-item" style="color: red"
+                  href="javascript:void(0)"> <i class="fas fa-trash"></i>Excluir</a>
               </div>
             </div>
           </td>
