--- a/src/app/pages/movement/new-movement/new-movement.component.html
+++ b/src/app/pages/movement/new-movement/new-movement.component.html
@@ -6,8 +6,9 @@
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
       <div class="col-lg-7 col-md-10">
-        <h1 class="display-2 text-white">Nova movimentação</h1>
-        <p class="text-white mt-0 mb-5">Esta é a página de cadastro de movimentações. Aqui você pode criar as suas
+        <h1 class="display-2 text-white">{{isUpdate ? 'Atualizar' : 'Nova'}} movimentação</h1>
+        <p class="text-white mt-0 mb-5">Esta é a página de {{isUpdate ? 'atualização' : 'cadastro'}} de movimentações.
+          Aqui você pode {{isUpdate ? 'atualizar' : 'criar'}} as suas
           movimentações podendo ser tanto de despesas quanto de receitas.</p>
         <!-- <a href="#!" class="btn btn-info">Editar Perfil</a> -->
       </div>
@@ -21,7 +22,7 @@
         <div class="card-header bg-white border-0">
           <div class="row align-items-center">
             <div class="col-8">
-              <h3 class="mb-0">Nova Movimentação</h3>
+              <h3 class="mb-0">{{isUpdate ? 'Atualizar' : 'Nova'}} Movimentação</h3>
             </div>
           </div>
         </div>
@@ -104,7 +105,8 @@
               </div>
               <div class="col-12 text-right">
                 <a href="#!" class="btn btn-sm btn-danger">Cancelar</a>
-                <a (click)="create()" class="btn btn-sm btn-primary">Criar movimentação</a>
+                <a (click)="create()" class="btn btn-sm btn-primary">{{isUpdate ? 'Atualizar' : 'Criar'}}
+                  movimentação</a>
               </div>
             </div>
           </form>
